objects/Order.object
<CustomObject>
    <fields>
        <fullName>Credit_Card_Expiration_Date__c</fullName>
        <label>Credit Card Expiration Date</label>
        <length>5</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Name__c</fullName>
        <label>Credit Card Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>16</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <label>DB Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <description>This is an icon field indicating status, tied to the Order Status field.</description>
        <formula>IMAGE(URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Status, 
&quot;Draft&quot;, &quot;01515000004olUt&amp;oid=00D7A0000008pI0&quot;, 
&quot;Active&quot;, &quot;01515000004olUq&amp;oid=00D7A0000008pI0&quot;, 
&quot;Activated&quot;, &quot;01515000004olUq&amp;oid=00D7A0000008pI0&quot;, 
&quot;01515000004olUq&amp;oid=00D7A0000008pI0&quot;),&quot;Status&quot;,24,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <picklist>
            <picklistValues>
                <fullName>FedEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Track_It__c</fullName>
        <formula>CASE( Shipping_Method__c , &quot;Fedex&quot;, HYPERLINK(&quot;http://www.fedex.com/Tracking?cntry_code=us&amp;tracknumbers=&quot;&amp; Tracking_ID__c,&quot;Track&quot;), &quot;UPS&quot;, HYPERLINK(&quot;http://wwwapps.ups.com/WebTracking/processInputRequestHTMLVersion=5.0&amp;sort_by=status&amp;loc=en_US&amp;InquiryNumber1=&quot;&amp; Tracking_ID__c &amp; &quot;&amp;track.x=32&amp;track.y=7&quot;, &quot;Track&quot;), &quot;DHL&quot;, HYPERLINK (&quot;http://track.dhl-usa.com/TrackByNbr.asp?ShipmentNumber=&quot; &amp; Tracking_ID__c,&quot;Track&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Track It!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_ID__c</fullName>
        <description>Used by the &quot;Track It&quot; field to look up the shipping status of a package.</description>
        <inlineHelpText>Sample Tracking Number:
FedEx: 123456789012</inlineHelpText>
        <label>Tracking ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <description>This is to ensure that icons show in Salesforce and Communities.</description>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;), 
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)), 
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)) 
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <recordTypes>
        <fullName>Order_Business</fullName>
        <active>true</active>
        <description>Used for B2B order use cases.  Includes contract fields.</description>
        <label>Order - Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Order_Consumer</fullName>
        <active>true</active>
        <description>Order record type used for consumer use case.  Contract and related business fields have been removed from this layout.</description>
        <label>Order - Consumer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>